--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
 li {
   list-style: none;
 }
@@ -22,7 +31,80 @@ li {
 
 .main {
   /* background-color: #bdf7f1; */
-  height: 600px;
+  height: auto;
+}
+
+.about {
+  background-color: hsl(207, 100%, 49%);
+  padding-top: 32px;
+  padding-bottom: 32px;
+  height: 100%;
+  background-image: linear-gradient(hsl(207, 100%, 49%), #fff);
+}
+
+.about .content {
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+}
+
+.about .content h1 {
+  font-size: 46px;
+  padding: 10px 0px;
+  margin: 0px 0px;
+}
+
+.service {
+  background-color: #fff;
+  height: 200px;
+  width: 100%;
+  justify-content: center !important;
+}
+
+.service .content {
+  /* padding-left: 48px;
+  padding-right: 48px; */
+  max-width: 66%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact_us {
+  /* background-color: #b1d0e0; */
+  height: 200px;
+  background-image: linear-gradient(#fff, #b1d0e0);
+}
+
+.contact_us .content {
+  max-width: 66%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.button {
+  padding: 12px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.6;
+  border-radius: 6px;
+}
+
+.email {
+  background-color: #1bafd0;
+}
+
+.facebook {
+  background-color: #3b5998;
+  margin-right: 10px;
+}
+
+.twitter {
+  background-color: #55acee;
+}
+
+.fa {
+  margin-right: 5px;
 }
 
 .footer {
