--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 a {
@@ -12,6 +13,7 @@ li {
 }
 
 .header {
+  margin: 0;
   background-color: rgb(33, 37, 41);
   color: #fff;
   height: 90px;
@@ -23,10 +25,17 @@ li {
   padding: 20px 40px;
 }
 
-.header-list li {
-  float: left;
-  padding: 33px 20px;
+.header-list ul {
+  float: right;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  margin-right: 20px;
   font-size: 16px;
+}
+
+.header-list li {
+  margin-right: 10px;
+  float: right;
 }
 
 .main {
@@ -109,7 +118,7 @@ li {
 
 .footer {
   background-color: rgb(33, 37, 41);
-  height: 200px;
+  height: 120px;
   padding: 40px;
 }
 
